<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="28dp"
        android:text="@string/title"
        android:textColor="#0000aa"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_com"
        android:layout_width="104dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="96dp"
        android:text="@string/computer"
        android:textColor="#0000ff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_you"
        android:layout_width="108dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/you"
        android:textColor="#0000ff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toEndOf="@+id/tv_com"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_sci"
        android:layout_width="94dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/scissors"
        android:textColor="#0000ff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_you" />

    <Button
        android:id="@+id/btn_stone"
        android:layout_width="94dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/stone"
        android:textColor="#0000ff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_sci" />

    <Button
        android:id="@+id/btn_cloth"
        android:layout_width="94dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/cloth"
        android:textColor="#0000ff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_stone" />

    <TextView
        android:id="@+id/txt_com"
        android:layout_width="109dp"
        android:layout_height="56dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="40dp"
        android:text="@string/setting"
        android:textColor="#ff00ff"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_com" />

    <TextView
        android:id="@+id/txt_result"
        android:layout_width="246dp"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/result"
        android:textColor="#ff0000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cloth" />

</android.support.constraint.ConstraintLayout>